workshop03/appv2-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: appv2-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      name: myapp
  template:
    metadata:
      labels:
        name: myapp
        version: v2
    spec:
      containers:
      - name: myappcont
        image: stackupiss/northwind-app:v2
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - name: myapp-port
          containerPort: 3000
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
